2010-05-16 17:39-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h
	* Source/win32/w32_general.m
	* Source/win32/WIN32Server.m: Added code to re-activate the
	theme when the theme changes on Windows.

2010-05-11 Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac: Make cairo the default backend. Fall back to art
	and xlib gracefully.
	* configure: Regenerate.

2010-05-10  Adam Fedor  <fedor@gnu.org>

	* Fix release documentation

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.19.0 Unstable release

2010-05-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.18.0

2010-04-20 Doug Simons <doug.simons@testplant.com>

	* Source/winlib/WIN32GState.m:
	Fix problem with display location for some composited images.

2010-04-20 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m:
	Fix problem with key events going to window other than the key window.
	Block callbacks while setting the foreground window to prevent key/main
	window changes from cascading in a feedback loop.

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/winlib/WIN32FontInfo.m:
	Use DEFAULT_QUALITY for fonts instead of ANTIALISED_QUALITY.

	ANTIALISED_QUALITY forces small text to be non-antialised,
	which looks out of place compared with most Windows apps.

2010-04-15 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_create.m:
	Use the default icon size when loading the app ico file
	Otherwise, the first icon in the file would be used.

2010-04-14 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

  * Source/win32/WIN32Server.m:  Have non-key, non-main windows 
  that order front not become active.  Also don't bring windows
  that are ordering out to the foreground first.

2010-03-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m,
	* Source/xlib/XGGState.m: Add more missing imports.

2010-03-25 Riccardo Mottola <rmottola@users.sf.net>
