@@ -1,3 +1,9 @@
+2010-05-25 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/x11/XGDragView.m
+	* Source/gsc/GSGState.m
+	Added missing imports.
+
 2010-05-16 17:39-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/win32/WIN32Server.h
